<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ddsm210</name>
  <version>0.0.0</version>
  <description>ROS control hardware interface for ddsm-210 servo</description>
  <maintainer email="alessiomorale@gmail.com">Alessio Morale</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>ddsm210_hardware_interface</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
