<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ddsm210-hardware-interface</name>
  <version>0.0.0</version>
  <description>Hardware interface for ddsm-210 servo</description>
  <maintainer email="alessiomorale@gmail.com">Alessio Morale</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_gmock</buildtool_depend>
  <buildtool_depend>ros2_control_test_assets</buildtool_depend>

  <depend>hardware_interface</depend>

  <depend>pluginlib</depend>

  <depend>rclcpp</depend>

  <depend>rclcpp_lifecycle</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
